--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "author": "hanjukim@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "benchmark": "^2.1.4"
+    "bcrypt": "^3.0.5",
+    "benchmark": "^2.1.4",
+    "uuid": "^3.3.2"
   }
 }
