--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^3.0.5",
+    "bcryptjs": "^2.4.3",
     "benchmark": "^2.1.4",
     "uuid": "^3.3.2"
   }
